--- a/style.css
+++ b/style.css
@@ -4,10 +4,17 @@
 	text-align: center;
 	width: 80px;
 	height: 80px;
-	border: 1px solid black;
+	border: 2px solid black;
+	border-radius: 12px;
+	font-weight: bold;
+	background-color: #ddd;
 }
 .personname {
+	position: relative;
+  	top: 50%;
+  	transform: translateY(-50%);
+}
+.remove {
 	display: block;
-	position: absolute;
-	top: 25%;
+	margin: 0 auto;
 }
